--- a/Acceuil.css
+++ b/Acceuil.css
@@ -3,11 +3,8 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1000;
-    font-size: 20px;
-    background-color: #00AEEF; /* Bleu FAGE */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);/
 }
-
 /* NAVBAR */
 nav {
     height: 90px;
@@ -105,18 +102,28 @@ nav {
     background-color: rgba(255,255,255,0.2);
 }
 
+
+
+
+
+
+
+
+
+
+
+/*-----------------------------------------*/
 .imageLogo{
     width: 140px;
 
 }
-.imageF{
+.imageFooter{
     display: block;
     width: 15%;
     margin-left: 10px;
 }
 
 footer {
-    border-style: solid;
     background-color: skyblue;
     color: white;
     font-family: Arial, sans-serif;
@@ -124,23 +131,21 @@ footer {
 }
 
 
-.footer-container {
+.footer-contenu {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    margin: 0;
     gap: 30px;
-    max-width: 1200px;
     padding-left: 20px;
+    max-width: 1200px;
 }
 
 
-.footer-col {
+.footer-colonne {
     flex: 1 1 220px;
     font-weight: 600;
 }
 
-.footer-col h5 {
+.footer-colonne h5 { /* titre des lst*/
     color: deepskyblue;
     margin-bottom: 15px;
     font-size: 20px;
@@ -150,28 +155,29 @@ footer {
 
 
 
-.footer-col ul li {
+.footer-colonne ul li {
     margin-bottom: 10px;
 }
 
-.footer-col ul li a {
+.footer-colonne ul li a {
     text-decoration: none;
-    color: white;
     font-size: 18px;
+    color: white;
 }
 
-.footer-col ul li a:hover {
+.footer-colonne ul li a:hover {
+    color: cornflowerblue;
     text-decoration: underline;
 }
 
-.footer-col p {
+.footer-colonne p { /*info sur la loc, tel ect... */
     font-size: 18px;
     margin: 5px 0;
 }
 
 .social-icons a {
     font-size: 22px;
-    margin-right: 15px;
+    margin: 7px;
     color: white;
     text-decoration: none;
 }
@@ -180,22 +186,21 @@ footer {
     color: #ffcc00;
 }
 
-.footer-bottom {
+.footer-bas {
     text-align: center;
     margin-top: 30px;
     font-size: 13px;
-    color: #eee;
 }
 
-.footer-bottom a {
+.footer-bas a {
     color: #fff;
     text-decoration: none;
 }
 
-.footer-bottom a:hover {
+.footer-bas a:hover {
     text-decoration: underline;
 }
-
+/*-----------------------------------------*/
 
 /* body */
 .carousel-item img {
